# Device_Anomaly_Detection

./: .gitattributes  .gitignore  Dockerfile  README.md  data.txt  dp_final_of_ibrl_dataset_anomaly_detection_(temp).py  dp_final_of_ibrl_dataset_anomaly_detection_humidity.py  dp_final_of_ibrl_dataset_anomaly_detection_temp.py  final_of_ibrl_dataset_anomaly_detection_(temp).py  final_of_ibrl_dataset_anomaly_detection_humidity.py  final_of_ibrl_dataset_anomaly_detection_temp.py  main.py  pyproject.toml
.github/workflows/: Device_Anomaly_Detection.yml
tests/: test_unittest.py  test_warnings.py
